feat(registration): add registration form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<!-- <app-register></app-register> -->
+<!-- <app-register-form></app-register-form> -->
+<app-generic-error></app-generic-error>
