--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,4 @@
-<p>register works!</p>
+<app-header></app-header>
+<h1>Escolha seu tipo de perfil!</h1>
+<app-profile-type type="Admin"></app-profile-type>
+<app-profile-type type="Colaborador"></app-profile-type>
