feat(profile): add profile components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <app-login></app-login> -->
 <!-- <app-register></app-register> -->
 <!-- <app-register-form></app-register-form> -->
-<app-generic-error></app-generic-error>
+<!-- <app-generic-error></app-generic-error> -->
+<!-- <app-profile-programmer></app-profile-programmer> -->
+<app-profile-admin></app-profile-admin>
