--- a/src/app/login/git-hub-login/git-hub-login.component.html
+++ b/src/app/login/git-hub-login/git-hub-login.component.html
@@ -1,4 +1,6 @@
+<div fxLayout="row" fxLayoutAlign="center center" >
 <a mat-button href="https://www.google.com/" target="_blank" class="button">
     <img src="../../../assets/GitHub-Mark-32px.png" />
     Entrar com o GitHub
 </a>
+</div>
