--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,2 +1,4 @@
 <app-app-header></app-app-header>
+<div fxLayout="row" fxLayoutAlign="center center">
 <app-register-form-component></app-register-form-component>
+</div>
