--- a/src/app/register/profile-type/profile-type.component.html
+++ b/src/app/register/profile-type/profile-type.component.html
@@ -1,5 +1,8 @@
-<mat-icon aria-hidden="false" 
-aria-label="Example home icon" 
-color="primary">person_add</mat-icon
->
-<h3><a>{{type}}</a></h3>
+<div fxLayout="column" fxLayoutAlign="center center" class="spacing">
+    <span class="material-icons">
+        {{icon}}
+        </span>
+  <h3>
+    <a routerLink="/registro">{{ type }}</a>
+  </h3>
+</div>
