--- a/src/app/profile-components/profile-header/profile-header.component.html
+++ b/src/app/profile-components/profile-header/profile-header.component.html
@@ -1,8 +1,12 @@
 <mat-card>
-  <img src="./../../../assets/EiUGGxoWsAI7c1b.jpg" alt="beerhavior" />
-  <a>Editar</a>
-  <h1>Nome</h1>
-  <p *ngIf="admin == true" class="admin">Admin</p>
+  <div fxLayout="row" fxLayoutAlign="end start"><a>Editar</a></div>
+  <div fxLayout="row" fxLayoutAlign="start center" class="spacing">
+    <img src="./../../../assets/EiUGGxoWsAI7c1b.jpg" alt="beerhavior" />
+    <div fxLayout="column" fxLayoutAlign="space-evenly start">
+      <h1>Nome</h1>
+      <p *ngIf="admin == true" class="admin">Admin</p>
+    </div>
+  </div>
   <p>Usuario</p>
   <mat-expansion-panel
     (opened)="panelOpenState = true"
@@ -15,5 +19,7 @@
     <p>Projeto 2</p>
     <p>Projeto 3</p>
   </mat-expansion-panel>
-  <button *ngIf="admin == true" class="btn" mat-raised-button color="primary">Dashboard</button>
+  <button *ngIf="admin == true" class="btn" mat-raised-button color="primary">
+    Dashboard
+  </button>
 </mat-card>
