--- a/src/app/profile-components/profile-manager/profile-manager.component.html
+++ b/src/app/profile-components/profile-manager/profile-manager.component.html
@@ -1,5 +1,9 @@
 <mat-card>
+  <div fxLayout="row" fxLayoutAlign="space-between center">
     <button mat-raised-button color="primary">Criar novo projeto</button>
-    <button mat-button color="primary">Adicionar recompensa</button>
-    <button mat-raised-button color="primary">Editar tabela de recompensas</button>
+    <button mat-button color="primary" (click)="addPrize()">Adicionar recompensa</button>
+    <button mat-raised-button color="primary" (click)="openPrizeTable()">
+      Editar tabela de recompensas
+    </button>
+  </div>
 </mat-card>
