--- a/src/app/register-form/register-form-component/register-form-component.component.html
+++ b/src/app/register-form/register-form-component/register-form-component.component.html
@@ -1,39 +1,47 @@
 <mat-card>
+  <mat-card-title>Realize seu cadastro aqui!</mat-card-title>
+  <mat-card-subtitle
+    >Só mais alguns passos para acessar a plataforma</mat-card-subtitle
+  >
+  <mat-card-content>
     <form class="example-form">
       <div class="col-12">
-        <mat-form-field class="align-center">
+        <mat-form-field>
           <mat-label>Usuario</mat-label>
           <input matInput />
         </mat-form-field>
       </div>
       <div class="col-12">
-        <mat-form-field class="align-center">
+        <mat-form-field>
           <mat-label>Nome</mat-label>
           <input matInput type="text" />
         </mat-form-field>
       </div>
       <div class="col-12">
-        <mat-form-field class="align-center">
+        <mat-form-field>
           <mat-label>Email</mat-label>
           <input matInput />
         </mat-form-field>
       </div>
       <div class="col-12">
-        <mat-form-field class="align-center">
+        <mat-form-field>
           <mat-label>Senha</mat-label>
           <input matInput type="password" />
         </mat-form-field>
       </div>
       <div class="col-12">
-        <mat-form-field class="align-center">
+        <mat-form-field>
           <mat-label>Repita a senha</mat-label>
           <input matInput type="password" />
         </mat-form-field>
       </div>
-      <div class="col-12">
-        <button class="align-center" mat-raised-button color="primary">
-          Cadastrar
-        </button>
-      </div>
     </form>
-  </mat-card>
+      <mat-card-actions>
+        <div fxLayout="row" fxLayoutAlign="center center">
+          <div class="col-12">
+            <button mat-raised-button color="primary">Cadastrar</button>
+          </div>
+        </div>
+      </mat-card-actions>
+  </mat-card-content>
+</mat-card>
