--- a/src/app/profile-components/profile-header/profile-header.component.html
+++ b/src/app/profile-components/profile-header/profile-header.component.html
@@ -19,7 +19,7 @@
     <p>Projeto 2</p>
     <p>Projeto 3</p>
   </mat-expansion-panel>
-  <button *ngIf="admin == true" class="btn" mat-raised-button color="primary">
+  <button *ngIf="admin == true" class="btn" mat-raised-button color="primary" (click)="goToDashboard()">
     Dashboard
   </button>
 </mat-card>
