feat(integration): project page integration

--- a/src/app/project/project-header/project-header.component.html
+++ b/src/app/project/project-header/project-header.component.html
@@ -1,11 +1,11 @@
 <mat-card>
   <div fxLayout="row" fxLayoutAlign="space-between start">
-    <h1>Nome</h1>
-    <p>Código: PRO465</p>
+    <h1>{{project.nameProject}}</h1>
+    <p>Código: {{project.codProject}}</p>
     <a>Editar</a>
   </div>
   <div fxLayout="row" fxLayoutAlign="start start" style="margin: -20px 0 20px 0">
-    <a>Git</a>
+    <a href="{{project.linkGitProject}}" target="_blank">Git</a>
   </div>
   <p>Administrador</p>
   <p style="font-weight: bold">Admin 1</p>
