--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,4 +1,4 @@
 <app-app-header></app-app-header>
-<app-project-header></app-project-header>
+<app-project-header [project]="project"></app-project-header>
 <app-project-score></app-project-score>
 <app-project-pendency></app-project-pendency>
