feat(integration): add collaborators to project page

--- a/src/app/profile-components/profile-header/profile-header.component.html
+++ b/src/app/profile-components/profile-header/profile-header.component.html
@@ -15,7 +15,7 @@
     <mat-expansion-panel-header>
       <mat-panel-title> Projetos </mat-panel-title>
     </mat-expansion-panel-header>
-    <p>Projeto 1</p>
+    <p class="clickable">Projeto 1</p>
     <p>Projeto 2</p>
     <p>Projeto 3</p>
   </mat-expansion-panel>
