--- a/src/app/profile-components/profile-programmer/profile-programmer.component.html
+++ b/src/app/profile-components/profile-programmer/profile-programmer.component.html
@@ -1,4 +1,4 @@
 <app-app-header></app-app-header>
-<app-profile-header></app-profile-header>
+<app-profile-header [name]="profile.nameCollaborator" [user]="profile.userCollaborator"></app-profile-header>
 <app-profile-request-join-project></app-profile-request-join-project>
-<app-profile-score></app-profile-score>
+<app-profile-score [score]="profile.totalScoreCollaborator"></app-profile-score>
