--- a/src/app/project/project-pendency/pendency/pendency.component.html
+++ b/src/app/project/project-pendency/pendency/pendency.component.html
@@ -6,5 +6,5 @@
 <span mat-dialog-title class="title">Pendência</span>
 <mat-divider></mat-divider>
 <div mat-dialog-content>
-  <app-pendency-aproval></app-pendency-aproval>
+  <app-pendency-aproval [idProject]="1"></app-pendency-aproval>
 </div>
