--- a/src/app/profile-components/profile-admin/profile-admin.component.html
+++ b/src/app/profile-components/profile-admin/profile-admin.component.html
@@ -1,3 +1,3 @@
 <app-app-header></app-app-header>
-<app-profile-header [admin]="isAdmin"></app-profile-header>
+<app-profile-header [admin]="isAdmin" [name]="profile.nameAdmin" [user]="profile.userAdmin"></app-profile-header>
 <app-profile-manager></app-profile-manager>
