--- a/src/app/dashboard/dashboard-points/dashboard-points.component.html
+++ b/src/app/dashboard/dashboard-points/dashboard-points.component.html
@@ -1,5 +1,5 @@
 <mat-card>
   <div fxLayout="row" fxLayoutAlign="center center">
-    <h1>Pontos disponíveis para resgate: 18.900</h1>
+    <h1>Pontos disponíveis para resgate: {{totalScore | number}}</h1>
   </div>
 </mat-card>
