--- a/src/app/register/profile-type/profile-type.component.html
+++ b/src/app/register/profile-type/profile-type.component.html
@@ -3,6 +3,6 @@
         {{icon}}
         </span>
   <h3>
-    <a routerLink="/registro">{{ type }}</a>
+    <a routerLink="/registro" (click)="selectType(type)">{{ type }}</a>
   </h3>
 </div>
