--- a/src/app/register-form/register-form-component/register-form-component.component.html
+++ b/src/app/register-form/register-form-component/register-form-component.component.html
@@ -4,42 +4,42 @@
     >Só mais alguns passos para acessar a plataforma</mat-card-subtitle
   >
   <mat-card-content>
-    <form class="example-form">
+    <form [FormGroup]="registrationControl">
       <div class="col-12">
         <mat-form-field>
           <mat-label>Usuario</mat-label>
-          <input matInput />
+          <input matInput [(ngModel)]="user" id="user" formControlName="user"/>
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Nome</mat-label>
-          <input matInput type="text" />
+          <input matInput type="text" [(ngModel)]="name" id="name" formControlName="name"/>
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Email</mat-label>
-          <input matInput />
+          <input matInput  [(ngModel)]="email" id="email" formControlName="email"/>
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Senha</mat-label>
-          <input matInput type="password" />
+          <input matInput type="password" [(ngModel)]="password" id="password"formControlName="password"/>
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Repita a senha</mat-label>
-          <input matInput type="password" />
+          <input matInput type="password" [(ngModel)]="validatePassword" formControlName="validatePassword"/>
         </mat-form-field>
       </div>
     </form>
       <mat-card-actions>
         <div fxLayout="row" fxLayoutAlign="center center">
           <div class="col-12">
-            <button mat-raised-button color="primary">Cadastrar</button>
+            <button mat-raised-button color="primary" (click)="submit()">Cadastrar</button>
           </div>
         </div>
       </mat-card-actions>
