--- a/src/app/new-project/new-project-form/new-project-form.component.html
+++ b/src/app/new-project/new-project-form/new-project-form.component.html
@@ -4,26 +4,26 @@
     >Adicione o projeto na plataforma!</mat-card-subtitle
   >
   <mat-card-content>
-    <form class="example-form">
+    <!-- <form class="example-form"> -->
       <div class="col-12">
         <mat-form-field>
           <mat-label>Nome</mat-label>
-          <input matInput />
+          <input matInput [(ngModel)]="nameProject"id="nameProject"/>
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Código</mat-label>
-          <input matInput type="text" />
+          <input matInput [(ngModel)]="codProject"id="codProject" type="text" />
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>URL do Git</mat-label>
-          <input matInput />
+          <input matInput [(ngModel)]="urlProject"id="urlProject"/>
         </mat-form-field>
       </div>
-      <div fxLayout="row" fxLayoutAlign="space-between center">
+      <!-- <div fxLayout="row" fxLayoutAlign="space-between center">
         <div class="col-12 search-person">
           <mat-form-field>
             <mat-label>Adicionar colaborador</mat-label>
@@ -33,8 +33,8 @@
         <button mat-icon-button color="primary">
           <mat-icon>person_search</mat-icon>
         </button>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="end start">
+      </div> -->
+      <!-- <div fxLayout="row" fxLayoutAlign="end start">
         <a>Adicionar</a>
       </div>
       <div class="spacing">
@@ -49,12 +49,12 @@
             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
           </mat-chip>
         </mat-chip-list>
-      </div>
-    </form>
+      </div> -->
+    <!-- </form> -->
     <mat-card-actions>
       <div fxLayout="row" fxLayoutAlign="center center">
         <div class="col-12 add-button">
-          <button mat-raised-button color="primary">Cadastrar</button>
+          <button mat-raised-button color="primary" (click)="submit()">Cadastrar</button>
         </div>
       </div>
     </mat-card-actions>
