--- a/src/app/register-form/register-form-component/register-form-component.component.html
+++ b/src/app/register-form/register-form-component/register-form-component.component.html
@@ -4,38 +4,38 @@
     >Só mais alguns passos para acessar a plataforma</mat-card-subtitle
   >
   <mat-card-content>
-    <form [FormGroup]="registrationControl">
+    <!-- <form class="example-form"> -->
       <div class="col-12">
         <mat-form-field>
           <mat-label>Usuario</mat-label>
-          <input matInput [(ngModel)]="user" id="user" formControlName="user"/>
+          <input matInput [(ngModel)]="user"id="user">
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Nome</mat-label>
-          <input matInput type="text" [(ngModel)]="name" id="name" formControlName="name"/>
+          <input matInput type="text" [(ngModel)]="name" id="name">
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Email</mat-label>
-          <input matInput  [(ngModel)]="email" id="email" formControlName="email"/>
+          <input matInput  [(ngModel)]="email" id="email">
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Senha</mat-label>
-          <input matInput type="password" [(ngModel)]="password" id="password"formControlName="password"/>
+          <input matInput type="password" [(ngModel)]="password" id="password">
         </mat-form-field>
       </div>
       <div class="col-12">
         <mat-form-field>
           <mat-label>Repita a senha</mat-label>
-          <input matInput type="password" [(ngModel)]="validatePassword" formControlName="validatePassword"/>
+          <input matInput type="password">
         </mat-form-field>
       </div>
-    </form>
+    <!-- </form> -->
       <mat-card-actions>
         <div fxLayout="row" fxLayoutAlign="center center">
           <div class="col-12">
